--- a/Connection/Operators Solution.csproj
+++ b/Connection/Operators Solution.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows</TargetFramework>
@@ -8,11 +7,13 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
 
-		<XpressionNetPath1>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net\10.5.0.5508__9632b4b433765424\xpression.net.dll</XpressionNetPath1>
-		<!--<XpToolsLibPath1>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpToolsLib.net\10.5.0.5508__28a9dbdb95a1c855\xptoolslib.net.dll</XpToolsLibPath>-->
+		<!-- Definition of file path to xpression.net -->
+		<XPressionFolder>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net</XPressionFolder>
+		<XpToolsLibFolder>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpToolsLib.net</XpToolsLibFolder>
 	</PropertyGroup>
 
 
+	<!-- Dont include certain files into loading: -->
 	<ItemGroup>
 		<Compile Remove="!AssemblyLoader.cs" />
 		<Compile Remove="OldCode.cs" />
@@ -29,106 +30,47 @@
 		<PackageReference Include="EntityFramework" Version="6.5.1" />
 		<PackageReference Include="ExcelDataReader" Version="3.7.0" />
 		<PackageReference Include="ExcelDataReader.DataSet" Version="3.7.0" />
-		<PackageReference Include="Rug.Osc" Version="1.2.5" />
+		<!--<PackageReference Include="Rug.Osc" Version="1.2.5" />-->
 		<PackageReference Include="SQLite" Version="3.13.0" />
-		<PackageReference Include="Stub.System.Data.SQLite.Core.NetFramework" Version="1.0.119" />
+		<!--<PackageReference Include="Stub.System.Data.SQLite.Core.NetFramework" Version="1.0.119" />-->
 		<PackageReference Include="System.Data.SQLite" Version="1.0.119" />
 		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
 		<PackageReference Include="System.Data.SQLite.EF6" Version="1.0.119" />
-		<PackageReference Include="System.Data.SQLite.Linq" Version="1.0.119" />
+		<!--<PackageReference Include="System.Data.SQLite.Linq" Version="1.0.119" />-->
 	</ItemGroup>
-
-	<!--..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net\*\xpression.net.dll-->
-	<!--..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpToolsLib.net\*\xptoolslib.net.dll-->
-
-	<!--Dynamicly checks for if the dll files of XPression exist and will load them if they do, and set the constant so that the code associated will be used-->
-	<!-- Use Wildcards to Include DLL Files -->
-	<!--
-  <Choose>
-    <When Condition="Exists('..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\15.0.0.0__71e9bce111e9429c\OFFICE.DLL')">
-      <ItemGroup>
-        <OfficeFile Include="..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\*\OFFICE.DLL" />
-      </ItemGroup>
-      <PropertyGroup>
-        <OfficePath>@(OfficeFile)</OfficePath>
-        <DefineConstants>$(DefineConstants);HAS_XPRESSION</DefineConstants>
-      </PropertyGroup>
-      <ItemGroup Condition="Exists($(OfficePath))">
-        <Reference Include="Office">
-          <HintPath>$(OfficePath)</HintPath>
-        </Reference>
-      </ItemGroup>
-		</When>
-  </Choose>
--->
-
-	
-	
-	<!--WORKING-->
-	<!--<PropertyGroup>
-		<XPressionString>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net</XPressionString>
-	</PropertyGroup>
 
 	<ItemGroup>
-		<XPressionFile Include="..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net\*\xpression.net.dll" />
-		<XPressionFolder Include="..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net" />
+	  <Compile Update="Properties\Settings.Designer.cs">
+	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Settings.settings</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
-	<PropertyGroup>
-		<XPressionPath>@(XPressionFile)</XPressionPath>
-		<XPressionFolderPath>@(XPressionFolder)</XPressionFolderPath>
-		<DefineConstants Condition="Exists('$(XPressionString)')">$(DefineConstants);HAS_XPRESSION</DefineConstants>
-	</PropertyGroup>
-
-	<ItemGroup Condition="Exists($(XPressionPath))">
-		<Reference Include="xpression.net">
-			<HintPath>$(XPressionPath)</HintPath>
-		</Reference>
-	</ItemGroup>-->
-
-
-	<!--WORKING-->
-	<!--<PropertyGroup>
-		<XPressionFolder>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net</XPressionFolder>
-	</PropertyGroup>
-	
-	<ItemGroup Condition="Exists('$(XPressionFolder)')">
-		<XPressionFile Include="$(XPressionFolder)\**\*.dll" />
+	<ItemGroup>
+	  <None Update="Properties\Settings.settings">
+	    <Generator>PublicSettingsSingleFileGenerator</Generator>
+	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+	  </None>
 	</ItemGroup>
 
-	<PropertyGroup Condition="Exists('$(XPressionFolder)')">
-		<XPressionPath>@(XPressionFile)</XPressionPath>
-		<DefineConstants>$(DefineConstants);HAS_XPRESSION</DefineConstants>
-	</PropertyGroup>
-
-	<ItemGroup Condition="Exists($(XPressionPath))">
-		<Reference Include="xpression.net">
-			<HintPath>$(XPressionPath)</HintPath>
-		</Reference>
-	</ItemGroup>-->
 
 
-
-
-
-
-
-
-	<PropertyGroup>
-		<XPressionFolder>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\xpression.net</XPressionFolder>
-	</PropertyGroup>
-
+	<!-- Include XPression if it is found -->
 	<Choose>
 		<When Condition="Exists('$(XPressionFolder)')">
+			<!-- Use Wildcards to find DLL File -->
 			<ItemGroup>
 				<XPressionFile Include="$(XPressionFolder)\**\*.dll" />
 			</ItemGroup>
-			
+
+			<!-- Set file path into property to use later and define constant HAS_XPRESSION -->
 			<PropertyGroup>
 				<XPressionPath>@(XPressionFile)</XPressionPath>
-				<DefineConstants>$(DefineConstants);HAS_XPRESSION</DefineConstants>
+				<DefineConstants>$(DefineConstants); HAS_XPRESSION</DefineConstants>
 			</PropertyGroup>
 
+			<!--Import assembly reference -->
 			<ItemGroup>
 				<Reference Include="xpression.net">
 					<HintPath>$(XPressionPath)</HintPath>
@@ -136,155 +78,4 @@
 			</ItemGroup>
 		</When>
 	</Choose>
-
-
-	
-
-
-	<!--<Target Name="Test2" AfterTargets="ResolveReferences" Condition="$(MyVariable) != 'true'">
-		<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|@(XPressionFolder)|!!!!!" Importance="High" />
-		<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|$(XPressionFolderPath)|!!!!!" Importance="High" />
-	</Target>-->
-	
-	
-	
-	
-	
-	
-	
-	<!--<ItemGroup Condition="Exists($(XpToolsLibPath))">
-		<Reference Include="xpToolsLib.net">
-			<HintPath>$(XpToolsLibPath)</HintPath>
-		</Reference>
-	</ItemGroup>-->
-
-	<!--<ItemGroup>
-		<OfficeFile Include="..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\*\OFFICE.DLL" />
-	</ItemGroup>
-	<PropertyGroup>
-		<OfficePath>@(OfficeFile)</OfficePath>
-	</PropertyGroup>
-	<ItemGroup Condition="Exists($(OfficePath))">
-		<Reference Include="Office">
-			<HintPath>$(OfficePath)</HintPath>
-		</Reference>
-	</ItemGroup>-->
-
-	<!--
-  <Choose>
-    <When Condition="">
-      <PropertyGroup>
-        <DefineConstants>$(DefineConstants);HAS_XPRESSION</DefineConstants>
-      </PropertyGroup>
-    </When>
-  </Choose>
-  -->
-	<!--
-	<ItemGroup Condition="Exists('..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\15.0.0.0__71e9bce111e9429c\OFFICE1.DLL')">
-		<OfficeFile Include="..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\15.0.0.0__71e9bce111e9429c\OFFICE1.DLL" />
-	</ItemGroup>
--->
-
-
-
-
-	<!--<ItemGroup>
-		<MyAssemblies Include="..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\15.0.0.0__71e9bce111e9429c\OFFICE.DLL" />
-	</ItemGroup>
-	<Target Name="RetrieveIdentities">
-		<GetAssemblyIdentity AssemblyFiles="@(MyAssemblies)">
-			<Output TaskParameter="Assemblies" ItemName="MyAssemblyIdentities" />
-		</GetAssemblyIdentity>
-	</Target>-->
-
-
-
-
-
-
-
-
-
-
-	<!--<PropertyGroup>
-    <OfficePath>@(OfficeFile)</OfficePath>
-
-  </PropertyGroup>-->
-
-
-	<!--Condition="'$(OfficeFile)' != ''"-->
-	<!--<Choose>
-    <When Condition="'$(OfficePath)' == ''">
-      <PropertyGroup>
-        <DefineConstants>$(DefineConstants);HAS_XPRESSION</DefineConstants>
-      </PropertyGroup>
-    </When>
-  </Choose>-->
-
-
-
-
-	<!--<PropertyGroup>
-		<XpressionNetFileCount>@(XpressionNetFiles-&gt;Count())</XpressionNetFileCount>
-		<XpToolsLibFileCount>@(XpressionNetFiles->'%(Name)')</XpToolsLibFileCount>
-	</PropertyGroup>-->
-
-	<!-- Set Properties Based on Included Files -->
-	<!--<PropertyGroup>
-		<XpressionNetPath  Condition="'$(XpressionNetPath)' != ''">@(XpressionNetFiles)</XpressionNetPath>
-		<XpToolsLibPath Condition="'$(XpressionNetPath)' != ''">@(XpToolsLibFiles)</XpToolsLibPath>
-
-		<DefineConstants Condition="'$(XpressionNetFileCount)' != '0' And $(XpToolsLibFileCount)' != '0'">$(DefineConstants);HAS_XPRESSION</DefineConstants>
-		<DefineConstants Condition="'$(XpToolsLibFileCount)' != ''">$(DefineConstants);HAS_XPRESSION</DefineConstants>
-	</PropertyGroup>-->
-
-	<!--<PropertyGroup>
-		<DefineConstants Condition="'$(XpressionNetPath)' != ''">$(DefineConstants);HAS_XPRESSION</DefineConstants>
-	</PropertyGroup>-->
-
-
-	<!--<ItemGroup Condition="Exists($(OfficePath))">
-    <Reference Include="Office">
-      <HintPath>$(OfficePath)</HintPath>
-    </Reference>
-  </ItemGroup>-->
-
-
-	<!--
-	<ItemGroup Condition="Exists($(XpressionNetPath))">
-		<Reference Include="xpression.net">
-			<HintPath>$(XpressionNetPath)</HintPath>
-		</Reference>
-	</ItemGroup>
-
-	<ItemGroup Condition="Exists($(XpToolsLibPath))">
-		<Reference Include="xpToolsLib.net">
-			<HintPath>$(XpToolsLibPath)</HintPath>
-		</Reference>
-	</ItemGroup>
-	-->
-
-	
-	<Target Name="Test" AfterTargets="ResolveReferences" Condition="$(MyVariable) != 'true'">
-		<!--<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|@(XPressionFile)|!!!!!" Importance="High" />
-		<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|$(XPressionPath)|!!!!!" Importance="High" />-->
-		<!--<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|@(XpToolsLibFiles)|!!!!!" Importance="High" />
-		<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!|$(XpToolsLibPath)|!!!!!" Importance="High" />-->
-		<!--<Message Text="!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!" Importance="High" />-->
-
-		<!--
-		<Message Text="Count of XpressionNetFiles: $(XpressionNetFileCount)" Importance="high" />
-		<Message Text="Count of XpressionNetFiles: $(XpToolsLibFileCount)" Importance="high" />
-		-->
-
-		<!--<Message Text="OfficeFile: @(OfficeFile)" Importance="high" />
-    <Message Text="OfficePath: $(OfficePath)" Importance="high" />
-    <Message Text="OfficePath: $(Office)" Importance="high" />-->
-
-
-		<!--<Message Text="_________________________Assembly Identity: %(MyAssemblyIdentities.Identity)"  Importance="high" />-->
-
-
-	</Target>
-
 </Project>
