--- a/Connection/Properties/Settings.settings
+++ b/Connection/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Operators_Solution.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="GraphicsProgram" Type="System.String" Scope="User">
+    <Setting Name="GraphicsSoftware" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
