Only minor changes

--- a/Connection/App.config
+++ b/Connection/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <userSettings>
         <Operators_Solution.Properties.Settings>
-            <setting name="GraphicsSoftware" serializeAs="String">
+            <setting name="GraphicsSoftware" serializeAs="GraphicsSoftware">
                 <value />
             </setting>
         </Operators_Solution.Properties.Settings>
