Added opening project button, other stuff done

--- a/Connection/App.config
+++ b/Connection/App.config
@@ -7,7 +7,10 @@
     </configSections>
     <userSettings>
         <Operators_Solution.Properties.Settings>
-            <setting name="GraphicsSoftware" serializeAs="GraphicsSoftware">
+            <setting name="GraphicsSoftware" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ProjectFile" serializeAs="String">
                 <value />
             </setting>
         </Operators_Solution.Properties.Settings>
