--- a/Connection/Properties/Settings.settings
+++ b/Connection/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="GraphicsSoftware" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ProjectFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
