--- a/Connection/OperatorsSolution.csproj
+++ b/Connection/OperatorsSolution.csproj
@@ -53,6 +53,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="Modules\TestModule.dll">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	  <None Update="Properties\Settings.settings">
 	    <Generator>PublicSettingsSingleFileGenerator</Generator>
 	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -60,7 +63,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Modules\" />
 	  <Folder Include="Properties\DataSources\" />
 	</ItemGroup>
 
