--- a/TestModule/TestModule.csproj
+++ b/TestModule/TestModule.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Connection\Operators_Solution.csproj" />
+    <ProjectReference Include="..\Connection\OperatorsSolution.csproj" />
   </ItemGroup>
 
 </Project>
