Got a bunch of stuff working nicely. Implemented panel collapsing, resizing and dll loading refinements

--- a/Connection/OperatorsSolution.csproj
+++ b/Connection/OperatorsSolution.csproj
@@ -61,7 +61,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="Modules\TestModule.dll">
+	  <None Update="Modules\**\*.dll">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	  <None Update="Program\Settings.settings">
