Separated settings per plugin (not fully working yet), progress on custom controls

--- a/Connection/OperatorsSolution.csproj
+++ b/Connection/OperatorsSolution.csproj
@@ -79,6 +79,7 @@
 
 	<ItemGroup>
 		<Folder Include="Forms\" />
+		<Folder Include="Modules\Interfaces\" />
 		<Folder Include="Program\DataSources\" />
 	</ItemGroup>
 
