Added properties for new controls, made operatorbutton into the bass control class, made it so that TestModule.dll gets copied after a build

--- a/TestModule/TestModule.csproj
+++ b/TestModule/TestModule.csproj
@@ -26,4 +26,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(TargetDir)TestModule.dll&quot; &quot;$(SolutionDir)Connection\Modules\Interfaces\&quot; /Y&#xD;&#xA;" />
+  </Target>
+
 </Project>
