--- a/TestModule/Settings.settings
+++ b/TestModule/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TestModule" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="GraphicsProgram" Type="System.String" Scope="User">
+    <Setting Name="GraphicsSoftwareInfo" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ProjectFile" Type="System.String" Scope="User">
